--- a/src/app/components/register/register.component.scss
+++ b/src/app/components/register/register.component.scss
@@ -1,6 +1,10 @@
 .mat-card{
     width: 600px;
-    margin: auto;
+    margin-top: 33px;
+    margin-left: auto;
+    margin-bottom: auto;
+    margin-right: auto;
+    //margin: auto;
 }
 
 .mat-card .full-width {
