--- a/src/app/components/del-dialog/del-dialog.component.html
+++ b/src/app/components/del-dialog/del-dialog.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Do you want to delete?</h1>
+<h1 mat-dialog-title>Do you want to delete this user?</h1>
 <div mat-dialog-content>
   {{user.firstName}}
 </div>
