--- a/src/app/components/product/product.component.scss
+++ b/src/app/components/product/product.component.scss
@@ -1,5 +1,6 @@
 .mat-card {
-    max-width: 300px;
+    height: 500px;
+    width: 290px;
     margin: auto;
 }
 
@@ -10,3 +11,10 @@
 .mat-card-actions .flex-spacer {
     width: 100%;
 }
+
+
+.mat-card-image{
+    width: 100%;
+    height: 65%;
+}
+
